# FlatCraft2

./: .clang-format  .gitignore  CMakeLists.txt
libs/error/: CMakeLists.txt
libs/error/include/error/: error.h
libs/error/src/: error.cpp
libs/fcblock/: CMakeLists.txt
libs/fcblock/include/fcblock/: fcblock.h
libs/fcblock/src/: fcblock.cpp
libs/pair_hash/: CMakeLists.txt
libs/pair_hash/include/pair_hash/: pair_hash.hpp
libs/player/: CMakeLists.txt
libs/player/include/player/: direction.h  player.h  renderer.h
libs/player/src/: arm.cpp  arm.h  head.cpp  head.h  leg.cpp  leg.h  player.cpp  renderer.cpp  torso.cpp  torso.h
libs/rect/: CMakeLists.txt
libs/rect/include/rect/: rect.h
libs/rect/src/: rect.cpp
src/: arm.cpp  block.hpp  error.cpp  error.hpp  event.cpp  head.cpp  head.hpp  leg.cpp  main.cpp  player.cpp  player.hpp  rect.cpp  rect.hpp  render.cpp  state.cpp  state.h  state.hpp  torso.cpp  torso.hpp  update.cpp
src/playerrender/: arm.cpp  arm.hpp  head.cpp  leg.cpp  leg.hpp  torso.cpp
